need to limit input rows to stop crashes

--- a/linear_regression_approach.ipynb
+++ b/linear_regression_approach.ipynb
@@ -6,7 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in data from two locations - e.g. CUSTOM HOUSE QUAY, CHARLEMONT PLACE"
+    "# READ IN INFO\n",
+    "reviews= []; polarity= []; are_early= [];\n",
+    "with open ('reviews.json', 'rb') as f:\n",
+    "    for i, item in enumerate(json_lines.reader(f)):\n",
+    "        if i <= LIMIT_INPUT_ROWS:\n",
+    "            try:\n",
+    "                langs = detect_langs(item['text'])\n",
+    "            except:\n",
+    "                pass\n",
+    "            for i, lang in enumerate(langs):\n",
+    "                if str(lang)[0:2] == 'en':\n",
+    "                    if float(str(lang)[3:]) > MIN_ENGLISH:\n",
+    "                        reviews.append(item['text'])\n",
+    "                        polarity.append(item['voted_up'])\n",
+    "                        are_early.append(item['early_access'])"
    ]
   }
  ],
