data reading implemented

--- a/linear_regression_approach.ipynb
+++ b/linear_regression_approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,126 +14,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['STATION ID', 'TIME', 'LAST UPDATED', 'NAME', 'BIKE STANDS', 'AVAILABLE BIKE STANDS', 'AVAILABLE BIKES', 'STATUS', 'ADDRESS', 'LATITUDE', 'LONGITUDE']\n",
-      "['2', '2020-01-01 06:25:02', '2020-01-01 06:24:06', 'BLESSINGTON STREET', '20', '18', '2', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 06:30:02', '2020-01-01 06:24:06', 'BLESSINGTON STREET', '20', '18', '2', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 06:35:02', '2020-01-01 06:34:15', 'BLESSINGTON STREET', '20', '18', '2', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 06:40:03', '2020-01-01 06:37:22', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 06:45:02', '2020-01-01 06:37:22', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 06:50:02', '2020-01-01 06:47:31', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 06:55:02', '2020-01-01 06:47:31', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:00:02', '2020-01-01 06:57:40', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:05:02', '2020-01-01 06:57:40', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:10:02', '2020-01-01 07:07:49', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:15:02', '2020-01-01 07:07:49', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:20:02', '2020-01-01 07:17:59', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:25:02', '2020-01-01 07:17:59', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:30:02', '2020-01-01 07:28:08', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:35:02', '2020-01-01 07:28:08', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:40:02', '2020-01-01 07:38:17', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:45:02', '2020-01-01 07:38:17', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:50:02', '2020-01-01 07:48:26', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 07:55:02', '2020-01-01 07:48:26', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:00:02', '2020-01-01 07:58:59', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:05:02', '2020-01-01 07:58:59', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:10:02', '2020-01-01 08:09:08', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:15:02', '2020-01-01 08:09:08', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:20:02', '2020-01-01 08:19:17', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:25:02', '2020-01-01 08:19:17', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:30:02', '2020-01-01 08:29:26', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:35:02', '2020-01-01 08:29:26', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:40:02', '2020-01-01 08:39:35', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:45:02', '2020-01-01 08:39:35', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:50:02', '2020-01-01 08:49:45', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 08:55:02', '2020-01-01 08:49:45', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:00:02', '2020-01-01 08:59:54', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:05:02', '2020-01-01 08:59:54', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:10:01', '2020-01-01 08:59:54', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:15:02', '2020-01-01 09:11:48', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:20:02', '2020-01-01 09:11:48', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:25:02', '2020-01-01 09:21:58', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:30:02', '2020-01-01 09:21:58', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:35:02', '2020-01-01 09:32:07', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:40:02', '2020-01-01 09:32:07', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:45:02', '2020-01-01 09:42:16', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:50:02', '2020-01-01 09:42:16', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 09:55:02', '2020-01-01 09:52:25', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:00:02', '2020-01-01 09:52:25', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:05:02', '2020-01-01 10:02:34', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:10:02', '2020-01-01 10:02:34', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:15:02', '2020-01-01 10:12:44', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:20:02', '2020-01-01 10:12:44', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:25:02', '2020-01-01 10:22:53', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:30:02', '2020-01-01 10:22:53', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:35:02', '2020-01-01 10:33:02', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:40:27', '2020-01-01 10:33:02', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:45:02', '2020-01-01 10:43:11', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:50:02', '2020-01-01 10:43:11', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 10:55:02', '2020-01-01 10:53:20', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:00:02', '2020-01-01 10:53:20', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:05:02', '2020-01-01 11:03:30', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:10:02', '2020-01-01 11:03:30', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:15:03', '2020-01-01 11:13:39', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:20:02', '2020-01-01 11:13:39', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:25:02', '2020-01-01 11:24:53', 'BLESSINGTON STREET', '20', '19', '1', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:30:02', '2020-01-01 11:24:53', 'BLESSINGTON STREET', '20', '19', '1', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:35:02', '2020-01-01 11:24:53', 'BLESSINGTON STREET', '20', '19', '1', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:40:02', '2020-01-01 11:38:52', 'BLESSINGTON STREET', '20', '20', '0', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:45:02', '2020-01-01 11:42:58', 'BLESSINGTON STREET', '20', '14', '6', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:50:02', '2020-01-01 11:42:58', 'BLESSINGTON STREET', '20', '14', '6', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 11:55:02', '2020-01-01 11:53:07', 'BLESSINGTON STREET', '20', '14', '6', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:00:02', '2020-01-01 11:59:35', 'BLESSINGTON STREET', '20', '14', '6', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:05:02', '2020-01-01 12:00:05', 'BLESSINGTON STREET', '20', '14', '6', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:10:02', '2020-01-01 12:09:02', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:15:02', '2020-01-01 12:09:02', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:20:02', '2020-01-01 12:19:11', 'BLESSINGTON STREET', '20', '16', '4', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:25:02', '2020-01-01 12:19:11', 'BLESSINGTON STREET', '20', '16', '4', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:30:03', '2020-01-01 12:29:21', 'BLESSINGTON STREET', '20', '16', '4', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:35:02', '2020-01-01 12:29:21', 'BLESSINGTON STREET', '20', '16', '4', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:40:02', '2020-01-01 12:39:56', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:45:02', '2020-01-01 12:39:56', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:50:02', '2020-01-01 12:39:56', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 12:55:02', '2020-01-01 12:50:05', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:00:02', '2020-01-01 12:50:05', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:05:02', '2020-01-01 13:00:14', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:10:02', '2020-01-01 13:00:14', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:15:02', '2020-01-01 13:10:23', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:20:03', '2020-01-01 13:10:23', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:25:02', '2020-01-01 13:20:32', 'BLESSINGTON STREET', '20', '15', '5', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:30:02', '2020-01-01 13:26:06', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:35:02', '2020-01-01 13:26:06', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:40:02', '2020-01-01 13:36:15', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:45:02', '2020-01-01 13:36:15', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:50:02', '2020-01-01 13:46:25', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 13:55:02', '2020-01-01 13:46:25', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 14:00:02', '2020-01-01 13:56:34', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 14:05:02', '2020-01-01 13:56:34', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 14:10:01', '2020-01-01 14:06:43', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 14:15:02', '2020-01-01 14:06:43', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 14:20:02', '2020-01-01 14:19:34', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 14:25:02', '2020-01-01 14:23:25', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 14:30:02', '2020-01-01 14:23:25', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n",
-      "['2', '2020-01-01 14:35:02', '2020-01-01 14:34:54', 'BLESSINGTON STREET', '20', '13', '7', 'Open', 'Blessington Street', '53.35677', '-6.26814']\n"
+      "06:25:02\n",
+      "06:30:02\n",
+      "06:35:02\n",
+      "06:40:03\n",
+      "06:45:02\n",
+      "06:50:02\n",
+      "06:55:02\n",
+      "07:00:02\n",
+      "07:05:02\n",
+      "07:10:02\n",
+      "07:15:02\n",
+      "07:20:02\n",
+      "07:25:02\n",
+      "07:30:02\n",
+      "07:35:02\n",
+      "07:40:02\n",
+      "07:45:02\n",
+      "07:50:02\n",
+      "07:55:02\n",
+      "08:00:02\n",
+      "08:05:02\n",
+      "08:10:02\n",
+      "08:15:02\n",
+      "08:20:02\n",
+      "08:25:02\n",
+      "08:30:02\n",
+      "08:35:02\n",
+      "08:40:02\n",
+      "08:45:02\n",
+      "08:50:02\n",
+      "08:55:02\n",
+      "09:00:02\n",
+      "09:05:02\n",
+      "09:10:01\n",
+      "09:15:02\n",
+      "09:20:02\n",
+      "09:25:02\n",
+      "09:30:02\n",
+      "09:35:02\n",
+      "09:40:02\n",
+      "09:45:02\n",
+      "09:50:02\n",
+      "09:55:02\n",
+      "10:00:02\n",
+      "10:05:02\n",
+      "10:10:02\n",
+      "10:15:02\n",
+      "10:20:02\n",
+      "10:25:02\n",
+      "10:30:02\n",
+      "10:35:02\n",
+      "10:40:27\n",
+      "10:45:02\n",
+      "10:50:02\n",
+      "10:55:02\n",
+      "11:00:02\n",
+      "11:05:02\n",
+      "11:10:02\n",
+      "11:15:03\n",
+      "11:20:02\n",
+      "11:25:02\n",
+      "11:30:02\n",
+      "11:35:02\n",
+      "11:40:02\n",
+      "11:45:02\n",
+      "11:50:02\n",
+      "11:55:02\n",
+      "12:00:02\n",
+      "12:05:02\n",
+      "12:10:02\n",
+      "12:15:02\n",
+      "12:20:02\n",
+      "12:25:02\n",
+      "12:30:03\n",
+      "12:35:02\n",
+      "12:40:02\n",
+      "12:45:02\n",
+      "12:50:02\n",
+      "12:55:02\n",
+      "13:00:02\n",
+      "13:05:02\n",
+      "13:10:02\n",
+      "13:15:02\n",
+      "13:20:03\n",
+      "13:25:02\n",
+      "13:30:02\n",
+      "13:35:02\n",
+      "13:40:02\n",
+      "13:45:02\n",
+      "13:50:02\n",
+      "13:55:02\n",
+      "14:00:02\n",
+      "14:05:02\n",
+      "14:10:01\n",
+      "14:15:02\n",
+      "14:20:02\n",
+      "14:25:02\n",
+      "14:30:02\n",
+      "14:35:02\n",
+      "14:40:02\n"
      ]
     }
    ],
    "source": [
+    "station_id= []; date= []; time= []; available_bikes= [];\n",
     "with open(FILENAME, newline='') as f:\n",
     "    reader = csv.reader(f)\n",
+    "    next(reader) # skip header\n",
     "    try:\n",
     "        for row_i, row in enumerate(reader):\n",
     "            if row_i >= INPUT_ROWS_LIMIT:\n",
     "                break\n",
-    "            print(row)\n",
+    "            station_id.append(row[0])\n",
+    "            date.append(row[1][0: 10])\n",
+    "            time.append(row[1][11: 19])\n",
+    "            print(row[1])\n",
     "    except csv.Error as e:\n",
     "        sys.exit('file {}, line {}: {}'.format(filename, reader.line_num, e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(station_id)"
    ]
   },
   {
