Core data reading complete

--- a/linear_regression_approach.ipynb
+++ b/linear_regression_approach.ipynb
@@ -2,168 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv, sys\n",
     "\n",
     "INPUT_ROWS_LIMIT= 100\n",
-    "FILENAME = 'dublinbikes_2020_Q1.csv'"
+    "FILENAME= 'dublinbikes_2020_Q1.csv'\n",
+    "MAX_STATION_ID= 117\n",
+    "MISSING_STATIONS= [117, 116, 70, 60, 46, 35, 20, 14, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "06:25:02\n",
-      "06:30:02\n",
-      "06:35:02\n",
-      "06:40:03\n",
-      "06:45:02\n",
-      "06:50:02\n",
-      "06:55:02\n",
-      "07:00:02\n",
-      "07:05:02\n",
-      "07:10:02\n",
-      "07:15:02\n",
-      "07:20:02\n",
-      "07:25:02\n",
-      "07:30:02\n",
-      "07:35:02\n",
-      "07:40:02\n",
-      "07:45:02\n",
-      "07:50:02\n",
-      "07:55:02\n",
-      "08:00:02\n",
-      "08:05:02\n",
-      "08:10:02\n",
-      "08:15:02\n",
-      "08:20:02\n",
-      "08:25:02\n",
-      "08:30:02\n",
-      "08:35:02\n",
-      "08:40:02\n",
-      "08:45:02\n",
-      "08:50:02\n",
-      "08:55:02\n",
-      "09:00:02\n",
-      "09:05:02\n",
-      "09:10:01\n",
-      "09:15:02\n",
-      "09:20:02\n",
-      "09:25:02\n",
-      "09:30:02\n",
-      "09:35:02\n",
-      "09:40:02\n",
-      "09:45:02\n",
-      "09:50:02\n",
-      "09:55:02\n",
-      "10:00:02\n",
-      "10:05:02\n",
-      "10:10:02\n",
-      "10:15:02\n",
-      "10:20:02\n",
-      "10:25:02\n",
-      "10:30:02\n",
-      "10:35:02\n",
-      "10:40:27\n",
-      "10:45:02\n",
-      "10:50:02\n",
-      "10:55:02\n",
-      "11:00:02\n",
-      "11:05:02\n",
-      "11:10:02\n",
-      "11:15:03\n",
-      "11:20:02\n",
-      "11:25:02\n",
-      "11:30:02\n",
-      "11:35:02\n",
-      "11:40:02\n",
-      "11:45:02\n",
-      "11:50:02\n",
-      "11:55:02\n",
-      "12:00:02\n",
-      "12:05:02\n",
-      "12:10:02\n",
-      "12:15:02\n",
-      "12:20:02\n",
-      "12:25:02\n",
-      "12:30:03\n",
-      "12:35:02\n",
-      "12:40:02\n",
-      "12:45:02\n",
-      "12:50:02\n",
-      "12:55:02\n",
-      "13:00:02\n",
-      "13:05:02\n",
-      "13:10:02\n",
-      "13:15:02\n",
-      "13:20:03\n",
-      "13:25:02\n",
-      "13:30:02\n",
-      "13:35:02\n",
-      "13:40:02\n",
-      "13:45:02\n",
-      "13:50:02\n",
-      "13:55:02\n",
-      "14:00:02\n",
-      "14:05:02\n",
-      "14:10:01\n",
-      "14:15:02\n",
-      "14:20:02\n",
-      "14:25:02\n",
-      "14:30:02\n",
-      "14:35:02\n",
-      "14:40:02\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "class StationConstantInfo: # this is a class to contain constant information about stations (so as to avoid unnecessary repeat reading of them)\n",
+    "    def __init__(self, station_id):\n",
+    "        self.station_id= station_id\n",
+    "        \n",
+    "    def populate(self, station_name, bike_capacity, address, latitude, longitude):\n",
+    "        self.station_name= station_name\n",
+    "        self.bike_capacity= bike_capacity\n",
+    "        self.address= address\n",
+    "        self.latitude= latitude\n",
+    "        self.longitude= longitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "station_id= []; date= []; time= []; available_bikes= [];\n",
+    "station_constants= [StationConstantInfo(i) for i in range(1, MAX_STATION_ID + 1)]\n",
+    "ids_to_populate= list(range(1, MAX_STATION_ID + 1))\n",
+    "for missing_id in MISSING_STATIONS:\n",
+    "    ids_to_populate.remove(missing_id)\n",
+    "\n",
     "with open(FILENAME, newline='') as f:\n",
-    "    reader = csv.reader(f)\n",
-    "    next(reader) # skip header\n",
+    "    reader = csv.reader(f); next(reader) # skip header\n",
+    "    current_id= 0\n",
     "    try:\n",
+    "        while len(ids_to_populate) != 0:\n",
+    "            row= next(reader)\n",
+    "            if int(row[0]) == current_id: # this 'if' is just for performance\n",
+    "                continue\n",
+    "            current_id= int(row[0])\n",
+    "            if current_id in ids_to_populate:\n",
+    "                station_constants[current_id - 2].populate(row[3], row[4], row[8], row[9], row[10])\n",
+    "                ids_to_populate.remove(current_id)\n",
+    "        for missing_id in MISSING_STATIONS:\n",
+    "            station_constants.pop(missing_id - 2)\n",
+    "        reader = csv.reader(f); next(reader) # skip header\n",
     "        for row_i, row in enumerate(reader):\n",
     "            if row_i >= INPUT_ROWS_LIMIT:\n",
     "                break\n",
     "            station_id.append(row[0])\n",
     "            date.append(row[1][0: 10])\n",
     "            time.append(row[1][11: 19])\n",
-    "            print(row[1])\n",
+    "            available_bikes.append(row[5])\n",
     "    except csv.Error as e:\n",
     "        sys.exit('file {}, line {}: {}'.format(filename, reader.line_num, e))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2', '2']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(station_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
