reader resets after station_consts populated

--- a/linear_regression_approach.ipynb
+++ b/linear_regression_approach.ipynb
@@ -34,9 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['STATION ID', 'TIME', 'LAST UPDATED', 'NAME', 'BIKE STANDS', 'AVAILABLE BIKE STANDS', 'AVAILABLE BIKES', 'STATUS', 'ADDRESS', 'LATITUDE', 'LONGITUDE']\n"
+     ]
+    }
+   ],
    "source": [
     "station_id= []; date= []; time= []; available_bikes= [];\n",
     "station_constants= [StationConstantInfo(i) for i in range(1, MAX_STATION_ID + 1)]\n",
@@ -58,17 +66,44 @@
     "                ids_to_populate.remove(current_id)\n",
     "        for missing_id in MISSING_STATIONS:\n",
     "            station_constants.pop(missing_id - 2)\n",
-    "        reader = csv.reader(f); next(reader) # skip header\n",
+    "        f.seek(0)\n",
+    "        reader= csv.reader(f);\n",
+    "        row= next(reader) # skip header\n",
+    "        print(row)\n",
     "        for row_i, row in enumerate(reader):\n",
     "            if row_i >= INPUT_ROWS_LIMIT:\n",
     "                break\n",
     "            station_id.append(row[0])\n",
     "            date.append(row[1][0: 10])\n",
     "            time.append(row[1][11: 19])\n",
-    "            available_bikes.append(row[5])\n",
+    "            available_bikes.append(row[6])\n",
     "    except csv.Error as e:\n",
     "        sys.exit('file {}, line {}: {}'.format(filename, reader.line_num, e))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['11', '11', '11', '10', '10', '10', '10', '9', '10', '10', '10', '10', '10', '10', '10', '11', '11', '11', '11', '11', '11', '11', '11', '11', '10', '10', '10', '10', '10', '11', '11', '11', '11', '12', '12', '14', '14', '14', '13', '13', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '13', '13', '13', '14', '14', '14', '12', '11', '11', '10', '10', '10', '10', '10', '12', '14', '14', '14', '15', '15', '15', '15', '15', '15', '15', '15', '16', '15', '15', '14', '14', '13', '13', '13', '13', '13', '13', '13', '13', '13', '12', '12', '12', '12']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(available_bikes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
