--- a/linear_regression_approach.ipynb
+++ b/linear_regression_approach.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv, sys\n",
+    "import datetime\n",
     "\n",
     "INPUT_ROWS_LIMIT= 100\n",
     "FILENAME= 'dublinbikes_2020_Q1.csv'\n",
     "MAX_STATION_ID= 117\n",
+    "SECS_IN_5MIN= 300\n",
     "MISSING_STATIONS= [117, 116, 70, 60, 46, 35, 20, 14, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,19 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['STATION ID', 'TIME', 'LAST UPDATED', 'NAME', 'BIKE STANDS', 'AVAILABLE BIKE STANDS', 'AVAILABLE BIKES', 'STATUS', 'ADDRESS', 'LATITUDE', 'LONGITUDE']\n"
-     ]
-    }
-   ],
+   "execution_count": 36,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "station_id= []; date= []; time= []; available_bikes= [];\n",
+    "station_id= []; epoch_time= []; percent_bikes_available= [];\n",
     "station_constants= [StationConstantInfo(i) for i in range(1, MAX_STATION_ID + 1)]\n",
     "ids_to_populate= list(range(1, MAX_STATION_ID + 1))\n",
     "for missing_id in MISSING_STATIONS:\n",
@@ -67,35 +63,36 @@
     "        for missing_id in MISSING_STATIONS:\n",
     "            station_constants.pop(missing_id - 2)\n",
     "        f.seek(0)\n",
-    "        reader= csv.reader(f);\n",
-    "        row= next(reader) # skip header\n",
-    "        print(row)\n",
+    "        reader= csv.reader(f); row= next(reader) # skip header\n",
     "        for row_i, row in enumerate(reader):\n",
     "            if row_i >= INPUT_ROWS_LIMIT:\n",
     "                break\n",
     "            station_id.append(row[0])\n",
-    "            date.append(row[1][0: 10])\n",
-    "            time.append(row[1][11: 19])\n",
-    "            available_bikes.append(row[6])\n",
+    "            epoch_time.append(int((datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), int(row[1][11: 13]), int(row[1][14: 16])) - datetime.datetime(2020,1,1,6,25)).total_seconds() / SECS_IN_5MIN)) # doing this long winded calculation rather than just indexing because I don't trust the data is fully chronological\n",
+    "            percent_bikes_available.append(float(row[6]) / float(row[4]))\n",
     "    except csv.Error as e:\n",
     "        sys.exit('file {}, line {}: {}'.format(filename, reader.line_num, e))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['11', '11', '11', '10', '10', '10', '10', '9', '10', '10', '10', '10', '10', '10', '10', '11', '11', '11', '11', '11', '11', '11', '11', '11', '10', '10', '10', '10', '10', '11', '11', '11', '11', '12', '12', '14', '14', '14', '13', '13', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '12', '13', '13', '13', '14', '14', '14', '12', '11', '11', '10', '10', '10', '10', '10', '12', '14', '14', '14', '15', '15', '15', '15', '15', '15', '15', '15', '16', '15', '15', '14', '14', '13', '13', '13', '13', '13', '13', '13', '13', '13', '12', '12', '12', '12']\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]\n",
+      "[0.1, 0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.05, 0.05, 0.05, 0.0, 0.3, 0.3, 0.3, 0.3, 0.3, 0.25, 0.25, 0.2, 0.2, 0.2, 0.2, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35, 0.35]\n"
      ]
     }
    ],
    "source": [
-    "print(available_bikes)"
+    "print(epoch_time)\n",
+    "print(percent_bikes_available)"
    ]
   },
   {
