--- a/mlp_regression_approach.ipynb
+++ b/mlp_regression_approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +166,8 @@
     "    \n",
     "    block= np.zeros((DATAPOINTS_PER_DAY - START_TIME, OPEN_HOURS), dtype=np.float)\n",
     "    daily_epoch_time= stations[2].data_days[epoch_day_i].daily_epoch_time\n",
-    "    for time_i in daily_epoch_time[START_TIME:]:\n",
-    "        print(\"time_i: \", time_i)\n",
+    "    #for time_i in daily_epoch_time[START_TIME:]:\n",
+    "        #print(\"time_i: \", time_i)\n",
     "#         hour= float(\"{:.3f}\".format(time_i / 12))\n",
     "#         block[time_i][int(hour)]= 1 - (hour % 1)\n",
     "#         block[time_i][int(hour) + 1]= hour % 1\n",
@@ -183,7 +183,7 @@
     "        if station.index == 1:\n",
     "            station_index_decrement= 1\n",
     "        if station.index in MISSING_STATIONS:\n",
-    "            print(\"Rejected.\")\n",
+    "            #print(\"Rejected.\")\n",
     "            station_index_decrement+= 1\n",
     "            continue\n",
     "        y= station.index - station_index_decrement\n",
@@ -198,25 +198,23 @@
     "        block_15minchange= np.zeros(DATAPOINTS_PER_DAY - START_TIME, dtype=np.int)\n",
     "        block_45minchange= np.zeros(DATAPOINTS_PER_DAY - START_TIME, dtype=np.int)\n",
     "        for block_i in range(len(block)):\n",
-    "            try:\n",
-    "                five_ago= block[block_i - 1] # From here up until the $ sign deals with the edge cases at the start\n",
-    "                fifteen_ago= block[block_i - 3]\n",
-    "                fourtyfive_ago= block[block_i - 9]\n",
-    "                if five_ago == DUD_VALUE:\n",
-    "                    five_ago= block[block_i]\n",
-    "                    fifteen_ago= five_ago\n",
-    "                    fourtyfive_ago= five_ago\n",
-    "                elif fifteen_ago == DUD_VALUE:\n",
-    "                    fifteen_ago= five_ago\n",
-    "                    fourtyfive_ago= five_ago\n",
-    "                elif fourtyfive_ago == DUD_VALUE:\n",
-    "                    fourtyfive_ago= fifteen_ago # $\n",
-    "                block_5minchange[block_i]= block[block_i] - five_ago\n",
-    "                block_15minchange[block_i]= block[block_i] - block[block_i - 3]\n",
-    "                block_45minchange[block_i]= block[block_i] - block[block_i - 9]\n",
-    "            except IndexError:\n",
-    "                print(\"IndexError\")\n",
-    "                pass\n",
+    "            five_ago= block[block_i]; fifteen_ago= block[block_i]; fourtyfive_ago= block[block_i];\n",
+    "            accept= False\n",
+    "            decrements= 10\n",
+    "            for decrement in reversed(range(decrements)): # e.g. [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+    "                try:\n",
+    "                    if block[block_i - min(1, decrement)] == DUD_VALUE or block[block_i - min(3, decrement)] == DUD_VALUE or block[block_i - min(9, decrement)] == DUD_VALUE:\n",
+    "                        continue\n",
+    "                    fourtyfive_ago= block[block_i - min(9, decrement)]\n",
+    "                    fifteen_ago= block[block_i - min(3, decrement)]\n",
+    "                    five_ago= block[block_i - min(1, decrement)]\n",
+    "                    break\n",
+    "                except IndexError:\n",
+    "                    print(\"IndexError with \", decrement)\n",
+    "                    continue\n",
+    "            block_5minchange[block_i]= block[block_i] - five_ago\n",
+    "            block_15minchange[block_i]= block[block_i] - fifteen_ago\n",
+    "            block_45minchange[block_i]= block[block_i] - fourtyfive_ago\n",
     "        block= np.reshape(block, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
     "        block_5minchange= np.reshape(block_5minchange, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
     "        block_15minchange= np.reshape(block_15minchange, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
