feature arrays looking better

--- a/mlp_regression_approach.ipynb
+++ b/mlp_regression_approach.ipynb
@@ -24,7 +24,7 @@
     "STARTING_DAY= 2\n",
     "MISSING_STATIONS= [117, 116, 70, 60, 46, 35, 20, 14, 1]\n",
     "TOTAL_DAYS= 91\n",
-    "OPEN_HOURS= 18 # want to change this to 18 i.e. excluding 1, 2, 3, and 4 am\n",
+    "OPEN_HOURS= 20 # want to change this to 18 i.e. excluding 1, 2, 3, and 4 am\n",
     "MAX_DISPLAYED_STATIONS= 1\n",
     "MAX_DISPLAYED_DAYS= 10\n",
     "MAX_TIME= int((datetime.datetime(2020,4,2,0,0) - datetime.datetime(2020,1,1,0,0)).total_seconds() / SECS_IN_5MIN)\n",
@@ -155,7 +155,7 @@
     "bikes_changes_past15= np.full((row_vol, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
     "bikes_changes_past45= np.full((row_vol, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
     "day_of_week= np.full((row_vol, len(DAYS_OF_WEEK)), DUD_VALUE, dtype=np.int)\n",
-    "hour_of_day= np.full((row_vol, OPEN_HOURS), DUD_VALUE, dtype=np.float)\n",
+    "hour_of_day= np.full((row_vol, OPEN_HOURS + 1), DUD_VALUE, dtype=np.float) # + 1 because we need the 0th/24th hour to be represented despite its exclusion\n",
     "\n",
     "rejected_days= 0\n",
     "for epoch_day_i in range(TOTAL_DAYS):\n",
@@ -164,14 +164,15 @@
     "    y= 0\n",
     "    day= stations[2].data_days[epoch_day_i].day_of_week\n",
     "    \n",
-    "    block= np.zeros((DATAPOINTS_PER_DAY - START_TIME, OPEN_HOURS), dtype=np.float)\n",
-    "    daily_epoch_time= stations[2].data_days[epoch_day_i].daily_epoch_time\n",
-    "    #for time_i in daily_epoch_time[START_TIME:]:\n",
-    "        #print(\"time_i: \", time_i)\n",
-    "#         hour= float(\"{:.3f}\".format(time_i / 12))\n",
-    "#         block[time_i][int(hour)]= 1 - (hour % 1)\n",
-    "#         block[time_i][int(hour) + 1]= hour % 1\n",
-    "#     hour_of_day[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
+    "    block= np.zeros((DATAPOINTS_PER_DAY - START_TIME, OPEN_HOURS + 1), dtype=np.float)\n",
+    "    daily_epoch_time= stations[2].data_days[epoch_day_i].daily_epoch_time[START_TIME:]\n",
+    "    for time_i in daily_epoch_time:\n",
+    "        if time_i != DUD_VALUE:\n",
+    "            hour= float(\"{:.3f}\".format(time_i / 12))\n",
+    "            hour-= START_TIME / DATAPOINTS_PER_HOUR\n",
+    "            block[time_i - START_TIME][int(hour) + 1]= hour % 1\n",
+    "            block[time_i - START_TIME][int(hour)]= 1 - (hour % 1)\n",
+    "    hour_of_day[x:x + block.shape[0], y:y + block.shape[1]]= block\n",
     "    \n",
     "    block= np.zeros((DATAPOINTS_PER_DAY - START_TIME, len(DAYS_OF_WEEK)), dtype=np.int)\n",
     "    for block_i, sub_arr in enumerate(block):\n",
@@ -201,7 +202,7 @@
     "            five_ago= block[block_i]; fifteen_ago= block[block_i]; fourtyfive_ago= block[block_i];\n",
     "            accept= False\n",
     "            decrements= 10\n",
-    "            for decrement in reversed(range(decrements)): # e.g. [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+    "            for decrement in reversed(range(decrements)): # i.e. [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
     "                try:\n",
     "                    if block[block_i - min(1, decrement)] == DUD_VALUE or block[block_i - min(3, decrement)] == DUD_VALUE or block[block_i - min(9, decrement)] == DUD_VALUE:\n",
     "                        continue\n",
@@ -212,9 +213,15 @@
     "                except IndexError:\n",
     "                    print(\"IndexError with \", decrement)\n",
     "                    continue\n",
-    "            block_5minchange[block_i]= block[block_i] - five_ago\n",
-    "            block_15minchange[block_i]= block[block_i] - fifteen_ago\n",
-    "            block_45minchange[block_i]= block[block_i] - fourtyfive_ago\n",
+    "            current= block[block_i]\n",
+    "            decrement= 1\n",
+    "            while current == DUD_VALUE and decrement < 10:\n",
+    "                current= block[block_i - decrement]\n",
+    "                decrement+= 1\n",
+    "            #print(\"current: \", current)\n",
+    "            block_5minchange[block_i]= current - five_ago\n",
+    "            block_15minchange[block_i]= current - fifteen_ago\n",
+    "            block_45minchange[block_i]= current - fourtyfive_ago\n",
     "        block= np.reshape(block, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
     "        block_5minchange= np.reshape(block_5minchange, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
     "        block_15minchange= np.reshape(block_15minchange, (DATAPOINTS_PER_DAY - START_TIME, 1))\n",
